# madhacks_2025

./: .env  Info.plist  README.md  biome.json  index.html  package-lock.json  package.json
src/: App.css  App.jsx  PreviousCreations.jsx  Whiteboard.jsx  create.jsx  join.jsx  main.jsx  menu.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-0624ac0d52285ccb21f8a84f7c47ede534b15b3b84c30e3036121012955ee0e7.json  query-3421c165247c464d7c56fa11399618e685d3a1dedf164d2d915711a77553bb06.json  query-80d050c9ed98ee823da670dc7ee29b2e16cd44e197bd4a339aad465f1e60577c.json  query-98f3a28b801df14cd08f477977157c35c45793d6c11a8e24048768acefe84456.json  query-e9d8fe746610c9f425087fd277a4b39697a8e3388b228c5e46680a70369c4f04.json  query-ee91719a3f6ab5d39706148edf6c100e5f207438ce86a7e06e20b9cddd4a92ab.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  room_ticket.rs
