[package]
name = "collab-whiteboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "collab_whiteboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iroh = "0.95.1"
tokio = { version = "1.48.0", features = ["sync"] }
anyhow = "1.0.100"
iroh-base = "0.95.1"
postcard = "1.1.3"
iroh-tickets = "0.2.0"
iroh-gossip = "0.95.0"
mac_address = "1.1.8"
futures-lite = "2.6.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
rand = "0.9.2"
dotenv = "0.15.0"

